--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,7 +6,7 @@
 	<title>ETO-MyInbox</title>
 
 	<script id="sap-ui-bootstrap"
-				src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
+		src="resources/sap-ui-core.js"
 			data-sap-ui-theme="sap_fiori_3"
 			data-sap-ui-resourceroots='{
 				"com.yaskawa.ETOMyInbox": "./"
